test/conformance/kuttl/generate-validating-admission-policy/clusterpolicy/standard/skip-generate/cpol-non-cel-rule/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ns-purpose-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
  validatingadmissionpolicy:
    generated: false
